# unibots

./: .gitignore  camera.params.txt  debug_ekf.txt  frames_2025-03-23_13.35.49.gv
ros_ws/: makefile  sample.txt
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/log/: latest_build
ros_ws/src/imu_calibration/: CMakeLists.txt  package.xml
ros_ws/src/imu_calibration/action/: CalibrateIMU.action
ros_ws/src/imu_calibration/launch/: imu_calibration.launch.py
ros_ws/src/imu_calibration/src/: imu_calibration_action_client.py  imu_calibration_action_server.py  imu_drift_calculator.py
ros_ws/src/imu_republishing/: CMakeLists.txt  package.xml
ros_ws/src/imu_republishing/src/: imu_republisher_node.py
ros_ws/src/motor_control_node/: package.xml  setup.py
ros_ws/src/motor_control_node/motor_control_node/: motor_control_node.py  motor_controller.py
ros_ws/src/motor_interface/: CMakeLists.txt  hardware_interface_plugin.xml  motor_interface.xml  package.xml  unibots_hardware_interface.xml
ros_ws/src/motor_interface/include/motor_interface/: motor_controller.hpp  unibots_motor_hardware_interface.hpp
ros_ws/src/motor_interface/launch/: motor_interface.launch.py
ros_ws/src/motor_interface/scripts/: motor_interface_node.py
ros_ws/src/motor_interface/src/: motor_controller.cpp  unibots_motor_hardware_interface.cpp
ros_ws/src/motor_interface/test/: test_gpiod.cpp
ros_ws/src/robot_control/: CMakeLists.txt  package.xml  test_plugin.py
ros_ws/src/robot_control/config/: diffdrive.yaml  ekf.yaml
ros_ws/src/robot_control/env-hooks/: robot_control.dsv.in
ros_ws/src/robot_control/launch/: bringup.launch.py  control.launch.py
ros_ws/src/robot_control/src/: __init__.py  hardware_interface.py  motor.py  odom_publisher.py
ros_ws/src/robot_control/urdf/: gazebo_ros2_control.urdf.xacro  robot.urdf.xacro  ros2_control.urdf.xacro
ros_ws/src/robot_control_py/: CMakeLists.txt  dummy_hardware_interface.xml  package.xml  tb6612fng_hardware_interface.xml
ros_ws/src/robot_control_py/config/: tb6612fng_controllers.yaml  tb6612fng_controllers_no_hw.yaml
ros_ws/src/robot_control_py/launch/: basic_test.launch.py  tb6612fng_control.launch.py  tb6612fng_control_simple.launch.py  tb6612fng_mock.launch.py  teleop.launch.py
ros_ws/src/robot_control_py/launch/debug_launch/: test_cm.launch.py  test_rsp.launch.py
ros_ws/src/robot_control_py/src/robot_control_py/: __init__.py  dummy_hardware_interface.py  tb6612fng_hardware_interface.py  teleop_keyboard.py
ros_ws/src/robot_control_py/urdf/: robot.urdf  robot.urdf.xacro  robot_control.xacro  robot_mock.urdf
scripts/motor/: keyboard_motor_control.py  motor-example.py  motor.py  test_i2c.py
scripts/realsense/: install.sh
