<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control_py</name>
  <version>0.0.0</version>
  <description>Python implementation of ROS2 Control hardware interface for TB6612FNG motor driver</description>
  <maintainer email="arromal.jayan@gmail.com">sigma</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>diff_drive_controller</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>examples_rclcpp_minimal_timer</depend>
  
  <!-- For libgpiod -->
  <depend>python3-gpiod</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/tb6612fng_hardware_interface.xml"/>
    <hardware_interface plugin="${prefix}/dummy_hardware_interface.xml"/>
  </export>
</package>
